--- a/app/src/main/res/layout/activity_music_play.xml
+++ b/app/src/main/res/layout/activity_music_play.xml
@@ -7,6 +7,16 @@
     android:background="@color/colorPrimary"
     tools:context=".MusicPlayActivity">
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:onClick="back"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_music_title"
         android:layout_width="wrap_content"
@@ -34,7 +44,7 @@
         android:id="@+id/tv_cur_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="00:00"
         android:textColor="#ffffff"
@@ -57,48 +67,57 @@
         android:id="@+id/iv_previous"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="1"
         android:onClick="preMusic"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/tv_play_mode"
         app:layout_constraintEnd_toStartOf="@+id/iv_play_pause"
+        app:layout_constraintStart_toEndOf="@+id/tv_play_mode"
         app:layout_constraintTop_toTopOf="@+id/tv_play_mode"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:drawable/ic_media_previous" />
+        app:srcCompat="@android:drawable/ic_media_previous"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <ImageView
         android:id="@+id/iv_next"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="28dp"
+        android:contentDescription="2"
         android:onClick="nextMusic"
         app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-        app:layout_constraintEnd_toStartOf="@+id/imageView5"
+        app:layout_constraintEnd_toStartOf="@id/iv_stop"
         app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:drawable/ic_media_next" />
+        app:srcCompat="@android:drawable/ic_media_next"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/iv_stop"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="16dp"
+        android:contentDescription="4"
         android:onClick="stopMusic"
         app:layout_constraintBottom_toBottomOf="@+id/iv_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_next"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:drawable/alert_light_frame" />
+        app:srcCompat="@android:drawable/alert_light_frame"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/tv_play_mode"
         android:layout_width="50dp"
         android:layout_height="30dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="60dp"
+        android:onClick="switchPlayMode"
         android:text="In order"
         android:textColor="#ffffff"
-        android:textSize="14sp"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seek_bar" />
 
@@ -106,20 +125,27 @@
         android:id="@+id/iv_play_pause"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="41dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="32dp"
+        android:contentDescription="3"
         android:onClick="playOrPause"
         app:layout_constraintBottom_toBottomOf="@+id/iv_previous"
         app:layout_constraintEnd_toStartOf="@+id/iv_next"
+        app:layout_constraintStart_toEndOf="@+id/iv_previous"
         app:layout_constraintTop_toTopOf="@+id/iv_previous"
-        app:srcCompat="@android:drawable/ic_media_pause" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@android:drawable/ic_media_pause"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <SeekBar
         android:id="@+id/seek_bar"
         android:layout_width="300dp"
         android:layout_height="20dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="4dp"
+        android:progress="50"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_duration" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
